Fix alignment of 'add' button

--- a/docs/dynamic_sheets/dragonage/0.1/sheet.css
+++ b/docs/dynamic_sheets/dragonage/0.1/sheet.css
@@ -90,8 +90,9 @@ div.ds_dragonage {
 }
 
 /* Buttons to extend lists */
-.ds_dragonage .da_extend_button {
+.ds_dragonage span.da_extend_button {
   display: block;
+  float: right!important;
   overflow: hidden;
 }
 
